--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "rxjs": "5.0.0-beta.8",
-    "zone.js": "^0.6.12",
-    "reflect-metadata": "0.1.3",
+    "@angular/common": "2.1.0",
+    "@angular/compiler": "2.1.0",
+    "@angular/core": "2.1.0",
+    "@angular/http": "2.1.0",
+    "@angular/platform-browser": "2.1.0",
+    "@angular/platform-browser-dynamic": "2.1.0",
+    "@angular/router": "3.1.0",
     "es6-shim": "^0.35.0",
-    "@angular/router": "3.0.0-beta.2"
+    "firebase": "^3.5.0",
+    "reflect-metadata": "0.1.8",
+    "rxjs": "5.0.0-rc.1",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "del": "^2.0.2",
@@ -21,38 +22,38 @@
     "gulp-sass": "^2.1.1",
     "browser-sync": "^2.9.11",
     "browser-sync-spa": "^1.0.3",
-    "karma": "^0.13.14",
-    "karma-coverage": "^0.5.3",
-    "karma-junit-reporter": "^0.4.2",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-junit-reporter": "^1.1.0",
     "jasmine": "^2.4.1",
-    "karma-jasmine": "^0.3.8",
+    "karma-jasmine": "^1.0.2",
     "es6-shim": "^0.35.0",
-    "karma-chrome-launcher": "^0.2.3",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-webpack": "^1.7.0",
     "isparta-loader": "^2.0.0",
     "webpack": "2.1.0-beta.20",
     "html-webpack-plugin": "^2.9.0",
     "style-loader": "^0.13.0",
-    "css-loader": "^0.23.1",
-    "postcss-loader": "^0.8.0",
+    "css-loader": "^0.25.0",
+    "postcss-loader": "^1.0.0",
     "autoprefixer": "^6.2.2",
     "json-loader": "^0.5.4",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "html-loader": "^0.4.3",
-    "ts-loader": "^0.8.2",
-    "sass-loader": "^3.1.2",
+    "ts-loader": "^0.9.3",
+    "sass-loader": "^4.0.2",
     "node-sass": "^3.4.2",
     "eslint": "^3.2.2",
-    "eslint-config-xo-space": "^0.12.0",
+    "eslint-config-xo-space": "^0.15.0",
     "eslint-loader": "^1.3.0",
     "babel-loader": "^6.2.0",
-    "babel-eslint": "^6.0.2",
+    "babel-eslint": "^7.0.0",
     "eslint-plugin-babel": "^3.1.0",
     "tslint": "^3.2.1",
-    "typescript": "^1.7.5",
+    "typescript": "^2.0.3",
     "typings": "^1.0.4",
     "tslint-loader": "^2.1.0",
-    "codelyzer": "^0.0.25"
+    "codelyzer": "^1.0.0-beta.2"
   },
   "scripts": {
     "build": "gulp",
